cicd-backend-user/cicd/v1/deployment-cicd-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-backend
spec:
  selector:
    matchLabels:
      app: cicd-backend
  replicas: 1
  template:
    metadata:
      labels:
       app: cicd-backend 
    spec:
      imagePullSecrets:
      - name: private-registry   
      containers:
      - name: cicd-backend
        imagePullPolicy: Always
        image: localhost:8082/cicd-backend:20221213160251
        ports:
        - containerPort: 7001
