cicd-backend-user/cicd/v1/service-cicd-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cicd-backend
spec:
  selector:
    app: cicd-backend  
  ports:
  - protocol: TCP
    targetPort: 7001
    port: 7001  
  type: NodePort
