cicd-backend-user/cicd/v1/service-cicd-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cicd-frontend
spec:
  selector:
    app: cicd-frontend  
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80  
  type: NodePort
