cicd-backend-user/cicd/v1/service-cicd-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cicd-mysql
spec:
  selector:
    app: cicd-mysql  
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306  
  type: NodePort
