cicd-backend-user/cicd/v1/cicd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-cicd-frontend
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: service-cicd-backend
              port: 
                number: 7001
